# AniEngine

./: CMakeLists.txt  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
